solved the issue in the overflowing in the login form

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -298,11 +298,10 @@ h5 {
 
 .profileIcon{
     border-radius: 100%;
-    border: 1px solid rgb(0, 0, 0);
-    background-color: rgba(218, 218, 218, 0.406);
-    box-shadow: 0px 0px 15px rgb(0, 0, 0);
-    padding: 0px 10.2px 2px 10.4px;
-    color: rgb(0, 0, 0);
+    color: #ffffffe4;
+    text-shadow: 0px 0px 15px rgb(0, 0, 0);
+    font-size: 50px !important;
+    padding: auto;
 }
 
 .chatButton {
